# barebones-hamux

./: .gitignore  01_lagrangians.html  01_lagrangians.md  02_neurons.html  02_neurons.md  99_using_nbdev.html  99_using_nbdev.md  README.md  bbhamux.py  demo.ipynb  environment.yaml  hamux.py  index.html  index.md  pyproject.toml  requirements.txt  search.json  settings.ini  sitemap.xml  test.py  test_ham.py  test_lagrangians.py
.github/workflows/: pages.yml  pytest.yml
_docs/: index.html  robots.txt  search.json  sitemap.xml
_proc/: 00_introduction.ipynb  nbdev.yml  sidebar.yml
_proc/_docs/: core.html  index.html  search.json  sitemap.xml
docs/: core.html  index.html  search.json  sitemap.xml
docs/tutorials/: energy transformer.html
docs_src/: .gitignore  README.md  settings.ini
docs_src/barebones_hamux/: _modidx.py
docs_src/nbs/: 01_lagrangians.qmd  02_neurons.qmd  99_using_nbdev.qmd  index.qmd  nbdev.yml  sidebar.yml
nbs/: 00_intro.ipynb  00_introduction.ipynb  nbdev.yml  sidebar.yml
nbs/tutorials/: 00_Energy Transformer.ipynb
scripts/: activate.sh  setup.sh
src/bbhamux/: __init__.py  bbhamux.py
tests/: test_lagrangians.py
