[tool.poetry]
name = "bbhamux"
version = "0.2.0"
description = "Minimal library to construct Hierarchical Associative Memories"
authors = ["Ben Hoover <benhoover34@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jax = "^0.4.14"
equinox = "^0.11.2"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
nbdev = "^2.3.13"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
jaxlib = "^0.4.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
