[project]
name = "bbhamux"
version = "0.2.0"
description = "Minimal library to construct Hierarchical Associative Memories"
authors = ["Ben Hoover <benhoover34@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
dependencies = [
    "equinox>=0.12.2",
    "jax>=0.6.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.5",
]
