[project]
name = "bbhamux"
version = "0.2.0"
description = "Minimal library to construct Hierarchical Associative Memories"
authors = [
    { name = "Ben Hoover" , email= "benhoover34@gmail.com" }
]
license = "Apache-2.0"
readme = "README.md"
dependencies = [
    "equinox>=0.12.2",
    "jax>=0.6.1",
    "jaxtyping>=0.3.2",
]

[dependency-groups]
dev = [
    "datasets>=3.6.0",
    "einops>=0.8.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "nbclient>=0.10.2",
    "nbdev>=2.4.2",
    "nbformat>=5.10.4",
    "optax>=0.2.4",
    "pytest>=8.3.5",
    "seaborn>=0.13.2",
]
